--- a/style.css
+++ b/style.css
@@ -55,17 +55,42 @@ body {
 .pawn {
   width: 3rem;
   height: 3rem;
-  background-color: #7f60fb;
   border-radius: 25%;
   transition: all 300ms ease;
   cursor: pointer;
+  position: absolute;
+}
+
+.pawn.selected {
+  transform: scale(1.2);
+  z-index: 10;
 }
 
 .controls {
   display: flex;
+  flex-direction: column;
   align-items: center;
   color: white;
   gap: .5rem;
+
+  .line {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+  }
+
+  button {
+    padding: .5rem 1rem;
+    background-color: #7f60fb;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background-color: #6b4df5;
+  }
 
   input[type="number"] {
     width: 3rem;
@@ -75,5 +100,15 @@ body {
     color: white;
     border-radius: 5px;
     text-align: right;
+  }
+
+  input[type="checkbox"] {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  input[type="checkbox"]:checked {
+    width: 1rem;
+    height: 1rem;
   }
 }
